player 1 attacks player 2

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,7 @@
 <h1><%= @player_1_name %> vs. <%= @player_2_name %></h1>
 <%=@player_2_name%>: 80HP
+<%= @player_1_name %> attacked <%= @player_2_name %>
+
+<form action="/attack" >
+   <input type="submit" value="Attack">
+</form>
