--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,10 @@
-<
+
 <form action="/names" method="post">
  <input type="text" name="player_1_name">
  <input type="text" name="player_2_name">
  <input type="submit" value="Submit">
+</form>
+
+<form action="/play" method="get">
+   <input type="submit" value="Attack">
 </form>
