--- a/views/play.erb
+++ b/views/play.erb
@@ -2,6 +2,6 @@
 <%=@player_2_name%>: 80HP
 <%= @player_1_name %> attacked <%= @player_2_name %>
 
-<form action="/attack" >
+<form action="/attack" method="get">
    <input type="submit" value="Attack">
 </form>
